--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -12,5 +12,28 @@
     </div>
 </div>
 
+<ul class="collapsible">
+    {% for task in tasks | sort(attribute="due_date") %}
+    <li>
+        <div class="collapsible-header white-text light-blue darken-4">
+            <i class="fas fa-caret-down"></i>
+            <strong>{{ task.due_date.strftime("%d %B, %Y") }}</strong> -- {{ task.task_name }}
+            {% if task.is_urgent == True %}
+                <i class="fas fa-exclamation-circle light-blue-text text-lighten-2"></i>
+            {% endif %}
+        </div>
+        <div class="collapsible-body">
+
+            <strong>{{ task.category }}</strong>
+            <p>{{ task.task_description }}</p>
+            <div class="card-action">
+                <a href="{{ url_for('edit_task', task_id=task.id) }}" class="btn green accent-4">Edit</a>
+                
+            </div>
+
+        </div>
+    </li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
