--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -19,17 +19,17 @@
             <i class="fas fa-caret-down"></i>
             <strong>{{ task.due_date.strftime("%d %B, %Y") }}</strong> -- {{ task.task_name }}
             {% if task.is_urgent == True %}
-                <i class="fas fa-exclamation-circle light-blue-text text-lighten-2"></i>
+            <i class="fas fa-exclamation-circle light-blue-text text-lighten-2"></i>
             {% endif %}
         </div>
         <div class="collapsible-body">
 
             <strong>{{ task.category }}</strong>
             <p>{{ task.task_description }}</p>
-            <div class="card-action">
+            <p>
                 <a href="{{ url_for('edit_task', task_id=task.id) }}" class="btn green accent-4">Edit</a>
-                
-            </div>
+                <a href="{{ url_for('delete_task', task_id=task.id) }}" class="btn red">Delete</a>
+            </p>
 
         </div>
     </li>
